[package]
name = "subnet_scanner"
version = "0.4.0" # Version bump!
edition = "2024"

[dependencies]
# Core CLI and network parsing
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.9"
rayon = "1.10"

# Async runtime and HTTP client
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] } # <-- Enable Serialize

# UI/UX
indicatif = "0.17"
comfy-table = "7.1"
colored = "2.1" # <-- ADD THIS

# File I/O
csv = "1.3" # <-- ADD THIS

# Error handling
anyhow = "1.0"