[package]
name = "subnet_scanner"
version = "0.4.0" # Version bump!
edition = "2024"

[dependencies]
# Core CLI and network parsing
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.11"
rayon = "1.10"

# Async runtime and HTTP client
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
dns-lookup = { version = "2.0" }

# UI/UX
indicatif = "0.17"
comfy-table = "7.1"
colored = "3.0"

# File I/O
csv = "1.3"

# Error handling
anyhow = "1.0"